assets/css/style.css
@import url("https://fonts.googleapis.com/css2?family=Caveat&family=Exo+2:ital,wght@0,100;0,200;0,300;0,400;1,100;1,200;1,300;1,400&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Raleway:ital,wght@0,100;0,300;1,100;1,300&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

a {
  color: none;
  text-decoration: none;
  color: whitesmoke;
}

body {
  background-color: #222f3e;
  background: linear-gradient(to left, #222f3e, #576574);
  color: rgb(41, 41, 41);
  font-family: "Lato", sans-serif;
}

.container {
  max-width: 1200px;
  width: 100%;
  padding: 3rem;
}

.share-buttons{
    margin-top: 6rem;
    display: flex;
    gap: 1.5rem;
    justify-content: center;
}

main {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
}

#contributor {
  margin-top: 2.25rem;

}

.contribute a {
  color: #ffffff !important;
  font-size: 12px;
}

.contribute a i {
  font-size: 16px;
  margin-right: 5px;
}

.quote {
  text-align: center;
  box-sizing: border-box;
  padding: 20px 10px;
  margin: 30px auto;
  max-width: 1000px;
}

.quote-text {
  font-family: "Exo 2", sans-serif;
  font-size: 2.4rem;
  font-weight: 300;
  position: relative;
  text-align: center;
  transition: all 0.5s ease-in-out;
}

@media screen and (width <=500px) {
  .quote-text {
    font-size: 1.1rem;
  }
}

.quote-author {
  font-size: 1rem;
  font-weight: 300;
  margin: 10px auto;
}

@media screen and (width <=500px) {
  .quote-author {
    font-size: 0.5rem;
  }
}

.controller {
  /* border: 3px solid #222f3e; */
  border-radius: 8px;
  padding: 30px;
  width: 60%;
  margin: 70px auto;
  position: relative;
}

@media screen and (width <=500px) {
  .controller {
    width: 100%;
    padding: 10px;
  }
}

.controller .clip-box {
  position: absolute;
  left: 0;
  right: 0;
  width: -moz-fit-content;
  width: fit-content;
  margin: 0 auto;
  padding: 5px 10px;
  /* border: 3px solid #222f3e; */
}

.controller .clip-box.added-by-box {
  bottom: 100%;
  border-radius: 5px 5px 0 0;
}

.controller .clip-box.contribute {
  top: 100%;
  border-radius: 0 0 5px 5px;
  background-color: #272727;
}

.controller .clip-box .added-by {
  color: rgb(49, 155, 248);
}

.controller-wrapper {
  text-align: center;
}

.controller-group button {
  /* border: 0.5px solid #222f3e; */
}

.controller-group button,
.controller-group select {
  padding: 15px 20px;
  border: none;
  outline: none;
  width: 50%;
  cursor: pointer;
  background-color: #222f3e;
  color: whitesmoke;
  transition: all 0.15s ease-in-out;
  font-weight: bold;
}

.controller-group button:hover,
.controller-group select:hover {
  background-color: #576574;
}

@media screen and (width <=500px) {

  .controller-group button,
  .controller-group select {
    width: 100%;
  }
}

.controller-group button {
  border-radius: 9px 9px 0 0;
  border-bottom: 3px solid #222f3e;
}

.controller-group button:active {
  transform: scale(0.97);
}

.controller-group select {
  border-radius: 0 0 9px 9px;
}

.controller-group select option {
  padding: 10px 20px;
}

.capitalise {
  text-transform: capitalize;
}

body {
  font-family: Arial, sans-serif;
  text-align: center;
  margin: 0;
  padding: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh;
  background: linear-gradient(30deg, #ffffff, #bebebe);
  background-size: 180% 180%;
  animation: gradient-animation 15s ease infinite;
}

.container {
  /* background: linear-gradient(45deg, #ffd700, #ffa500); */
  /* padding: 2px; */
  border-radius: 25px;
  box-shadow: 0 0 80px 1px rgb(255 255 255 / 30%);
  max-width: 700px;
  text-align: center;
  margin: 0 auto;
  transition: background-color 0.3s ease;
  position: relative;
  border: 25px solid #272727;
}

.container {
  background: rgba(237, 237, 237, 1);
}

@supports (-webkit-backdrop-filter: none) or (backdrop-filter: none) {
  .container {
    -webkit-backdrop-filter: blur(50px);
    backdrop-filter: blur(50px);
  }
}


.theme_changer_button {
  position: absolute;
  top: 50%;
  left: 0;
  transform: translateY(-50%);
  padding: 5px;
}

.theme_changer_button div input {
  display: none;
}

.theme_changer_button div label {
  display: block;
  margin: 10px;
  width: 25px;
  height: 25px;
  border-radius: 50%;
  background-color: #c70039;
}

.theme_changer_button div input:checked~label,
.theme_changer_button div label:hover {
  outline: 3px solid rgba(0, 0, 0, 0.284);
  cursor: pointer;
}

.theme_changer_button div:nth-child(1) label {
  background-color: rgb(118, 118, 231);
}

.theme_changer_button div:nth-child(2) label {
  background-color: rgb(235, 118, 118);
}

.theme_changer_button div:nth-child(3) label {
  background-color: rgb(102, 241, 130);
}

.theme_changer_button div:last-child label {
  background-color: rgb(154, 210, 231);
}

